...
            </objects>
            <point key="canvasLocation" x="2538" y="-1080"/>
        </scene>
        <!--History-->
        <scene sceneID="76u-ll-jmi">
            <objects>
                <viewControllerPlaceholder storyboardName="History" id="aY9-2c-JuS" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BKK-JK-ySC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2538" y="-950"/>
        </scene>
        <!--myQRcode-->
        <scene sceneID="IB0-wK-xzm">
            <objects>
                <tableViewController id="0zn-sQ-Gnv" customClass="GenerateViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="syD-Pw-mOE">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection id="a2k-a7-eYR">
...
                                        <rect key="frame" x="0.0" y="18" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9Nn-zX-y9P" id="vc5-eL-SDo">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Inhalt des QR Codes" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="DwH-hJ-Ipd">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="yes" keyboardType="alphabet" returnKeyType="done"/>
                                                </textField>
                                            </subviews>
                                            <constraints>
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBE-FK-kol">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                    <state key="normal" title="QR Code generieren"/>
                                                    <connections>
                                                        <action selector="generateButtonAction:" destination="0zn-sQ-Gnv" eventType="touchUpInside" id="KEP-5k-cNQ"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4f-wI-1Pm">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                    <state key="normal" title="Generierten QR Code exportieren"/>
                                                    <connections>
                                                        <action selector="shareImageButton:" destination="0zn-sQ-Gnv" eventType="touchUpInside" id="wPa-mg-ILn"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="0zn-sQ-Gnv" id="irG-ah-HOC"/>
                            <outlet property="delegate" destination="0zn-sQ-Gnv" id="Kgs-eU-nul"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Generieren" image="qrcode" catalog="system" id="YWT-57-rL4"/>
                    <navigationItem key="navigationItem" title="myQRcode" id="hFD-uy-cC7">
                        <barButtonItem key="leftBarButtonItem" title="About" image="Settings" id="mbM-68-iH4">
                            <connections>
                                <segue destination="deY-rb-GIn" kind="presentation" id="viF-h2-jNg"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="About" image="History-Icon" id="Hud-aR-JWF">
                            <connections>
...
            </objects>
            <point key="canvasLocation" x="2039" y="-1003"/>
        </scene>
        <!--Scan-->
        <scene sceneID="gRf-KO-fJ3">
            <objects>
                <viewControllerPlaceholder storyboardName="Scan" id="EI8-g5-pW7" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="1F2-sl-1iK"/>
                    <navigationItem key="navigationItem" id="WVy-xM-xnI"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qrz-Cs-mVz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="918" y="-485"/>
...
