...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Scannen-->
        <scene sceneID="Hav-R8-dkw">
            <objects>
                <viewController title="Scannen" id="YYb-AG-PfO" customClass="ScanViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="OMD-Mb-ige">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="nAa-mU-17H"/>
                    </view>
...
            </objects>
            <point key="canvasLocation" x="1920" y="139"/>
        </scene>
        <!--Result-->
        <scene sceneID="auR-Ud-BNn">
            <objects>
                <viewController title="Result" id="eWd-Zz-orO" customClass="ScanResultViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="G6n-uK-Avv">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RcF-I1-aFd">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="EhM-gj-O7u"/>
                                </constraints>
                                <items>
                                    <navigationItem title="Ergebnis" id="weY-8y-NRz">
                                        <barButtonItem key="leftBarButtonItem" title="Schließen" style="done" id="qYL-yu-zT8">
                                            <connections>
                                                <action selector="dismiss:" destination="eWd-Zz-orO" id="WrB-gb-fTM"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
