...

/* Generate View Controller */

/* XY Items left placeholder */
"ZNT-9e-QHC.text" = "XYZ charaters left";
/* Templates Button */
"yyP-HG-gaD.contentConfiguration.text" = "Templates";
/* Use last Templazte Button */
"qXI-71-Ho1.contentConfiguration.text" = "Use last template again";

/* Templates View Controller */
/* Title */
"ygU-Zj-EFm.title" = "Templates";
/* Close Button */
"Z2y-HK-CYq.title" = "Close";
/* Template Name Placeholder */
"XNl-he-7ff.text" = "TEMPLATE_NAME";

/* Enter Data to Template View Controller */
/* Title */
"wRj-ek-yHH.title" = "Enter Data";
...
